# code-explorer

./: .gitignore  COMPLETED_FEATURES.md  IMPLEMENTATION_SUMMARY.md  KUZU_QUERIES.md  QUICK_REFERENCE.md  README.md  USAGE_EXAMPLES.md  demo_real_code.py  docker-compose.yml  export_dependencies_json.py  pyproject.toml  test_impact_visualizer.py  test_integration.py
docs/: RICH_NESTED_PROGRESS.md  bulk_loading.md  index.md
docs/explanation/: architecture.md
docs/reference/: cli-commands.md
docs/tutorials/: getting-started.md  impact-analysis.md
examples/: bulk_load_example.py  instrument_export_parquet.py  timer_examples.py
openspec/: project.md
openspec/changes/add-call-graph-viz/: proposal.md  tasks.md
openspec/changes/add-call-graph-viz/specs/visualization/: spec.md
openspec/changes/add-code-search/: proposal.md  tasks.md
openspec/changes/add-code-search/specs/code-search/: spec.md
openspec/changes/add-dependency-analysis/: design.md  tasks.md
openspec/changes/add-dependency-analysis/specs/dependency-analysis/: spec.md
openspec/changes/add-enhanced-graph-schema/: design.md  proposal.md  tasks.md
openspec/changes/add-enhanced-graph-schema/specs/dependency-analysis/: spec.md
openspec/changes/add-git-blame-integration/: proposal.md  tasks.md
openspec/changes/add-git-blame-integration/specs/git-integration/: spec.md
openspec/changes/add-kuzu-persistence/: proposal.md  tasks.md
openspec/changes/archive/2025-10-10-add-dependency-analysis/: proposal.md
openspec/specs/dependency-analysis/: spec.md
perfo/: USAGE.md  benchmark_batch_load.py  benchmark_bulk_load.py  create_sample_data.py  example_analysis.py  example_load_fake_data.py  export_graph.py  generate_fake_data.py
src/code_explorer/: __init__.py  analyzer.py  cli.py  console_styles.py  graph.py  impact.py  visualizer.py
src/code_explorer/analyzer/: __init__.py  base_analyzer.py  call_resolver.py  export_parquet.py  models.py  parser.py  tree_sitter_adapter.py
src/code_explorer/analyzer/extractors/: __init__.py  attributes.py  base.py  classes.py  decorators.py  exceptions.py  functions.py  imports.py  variables.py
src/code_explorer/graph/: __init__.py  batch_operations.py  bulk_loader.py  edge_operations.py  graph.py  node_operations.py  queries.py  schema.py
src/code_explorer/graph/graph_new/: __init__.py  batch_operations.py  edge_operations.py  graph.py  models.py  node_operations.py  queries.py  schema.py
src/code_explorer/utils/: __init__.py  memory_profiler.py  timer.py
tests/: README.md  conftest.py
(+1 files in other folders)
