[project]
name = "code-explorer"
version = "0.1.0"
description = "Python dependency analysis tool with fine-grained impact tracking"
readme = "README.md"
authors = [
    { name = "Thomas PEDOT", email = "thomas.pedot@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "astroid>=3.0",
    "kuzu==0.11.2",
    "pandas>=2.0",
    "memray>=1.19.1",
    "codetiming>=1.4.0",
    "pyarrow>=21.0.0",
    "polars>=1.34.0",
    "psutil>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
]
perf = [
    "faker>=20.0",
    "polars>=0.19.0",
]

[project.scripts]
code-explorer = "code_explorer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
]
